[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/DTNouveau-Regular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://gui/PauseScreen.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 1
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=7]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 1 )

[node name="PauseScreen" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.788235, 0.913725, 0.803922, 1 )

[node name="Label" type="Label" parent="."]
margin_left = 62.0
margin_top = 75.0
margin_right = 252.0
margin_bottom = 116.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 0.439216, 0.439216, 1 )
custom_colors/font_color_shadow = Color( 0.909804, 0.627451, 0.627451, 1 )
custom_fonts/font = SubResource( 1 )
text = "PAUSED"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 71.0
margin_top = -74.0
margin_right = 741.0
margin_bottom = -32.0
custom_constants/separation = 60
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="HBoxContainer"]
margin_right = 88.0
margin_bottom = 42.0
theme = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "RESUME"
expand_icon = true

[node name="Options" type="Button" parent="HBoxContainer"]
margin_left = 148.0
margin_right = 222.0
margin_bottom = 42.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "Options"

[node name="Save and Exit" type="Button" parent="HBoxContainer"]
margin_left = 282.0
margin_right = 399.0
margin_bottom = 42.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "Save and Exit"

[connection signal="pressed" from="HBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="HBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="HBoxContainer/Save and Exit" to="." method="_on_Save_and_Exit_pressed"]
